# zStandardNew

./: build.gradle
gradle/wrapper/: gradle-wrapper.properties
zstandard/: build.gradle
zstandard/src/main/: AndroidManifest.xml
zstandard/src/main/cpp/: CMakeLists.txt  gl3stub.cpp  zClass.cpp  zCloudDropbox.cpp  zCloudMail.cpp  zCloudYandex.cpp  zFile.cpp  zGL.cpp  zHMAC_SHA1.cpp  zHtml.cpp  zHttpRequest.cpp  zIOfile.cpp  zInterpolator.cpp  zJSON.cpp  zJniHelper.cpp  zJpg.cpp  zOAuth.cpp  zPng.cpp  zSHA1.cpp  zSettings.cpp  zShader.cpp  zSpline.cpp  zString.cpp  zString8.cpp  zStringUTF8.cpp  zTga.cpp  zTypes.cpp  zUnzip.cpp  zXml.cpp  zZip.cpp  zstandard.cpp
zstandard/src/main/cpp/include/zstandard/: gl3stub.h  zArray.h  zClass.h  zCloud.h  zCrypt.h  zFile.h  zFormat.h  zGL.h  zGRef.h  zHMAC_SHA1.h  zHtml.h  zHttpRequest.h  zIOfile.h  zInterpolator.h  zJSON.h  zJniHelper.h  zJpg.h  zPng.h  zRand.h  zSHA1.h  zSettings.h  zShader.h  zSpline.h  zString.h  zString8.h  zStringUTF8.h  zTga.h  zTypes.h  zUnzip.h  zXml.h  zZip.h  zstandard.h
